--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+stsbl-iserv3-internet (17.05.07-1) experimental; urgency=medium
+
+   [ Felix Jacobi ]
+   * Fixed wrong menu service id.
+
+ -- Stadtteilschule Blankenese <repository@stsbl.de>  Sun, 07 May 2017 20:43:09 +0200
+
 stsbl-iserv3-internet (17.05.07-0) unstable; urgency=low
 
   * Initial Release.
