--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+stsbl-iserv3-internet (18.05.23-1) experimental; urgency=medium
+
+  * Added license
+  * Updated copyright
+  * Updated packaging
+  * Updated bundle for Symfony 4
+
+ -- Felix Jacobi <felix.jacobi@stsbl.de>  Wed, 23 May 2018 03:01:11 +0200
+
 stsbl-iserv3-internet (17.07.21-1) experimental; urgency=medium
 
   [ Felix Jacobi ]
