--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv3-internet (18.05.23-2) experimental; urgency=medium
+
+  * Removed object manager workaround
+
+ -- Felix Jacobi <felix.jacobi@stsbl.de>  Wed, 23 May 2018 06:26:13 +0200
+
 stsbl-iserv3-internet (18.05.23-1) experimental; urgency=medium
 
   * Added license
