--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv3-internet (18.06.16-1) experimental; urgency=medium
+
+  * Fixed deprecation and removed superflous object manager
+
+ -- Felix Jacobi <felix.jacobi@stsbl.de>  Sat, 16 Jun 2018 19:48:48 +0200
+
 stsbl-iserv3-internet (18.05.23-2) experimental; urgency=medium
 
   * Removed object manager workaround
