--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv3-internet (18.09.30-1) experimental; urgency=medium
+
+  * Rebuilt with 'webpack -p'
+
+ -- Felix Jacobi <felix.jacobi@stsbl.de>  Sun, 30 Sep 2018 13:22:15 +0200
+
 stsbl-iserv3-internet (18.09.12-1) experimental; urgency=medium
 
   * Moved to webpack
