--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv3-internet (18.11.25-1) experimental; urgency=medium
+
+  * Adapted module structure to web application move
+
+ -- Felix Jacobi <felix.jacobi@stsbl.de>  Sun, 25 Nov 2018 22:44:21 +0100
+
 stsbl-iserv3-internet (18.09.30-1) experimental; urgency=medium
 
   * Rebuilt with 'webpack -p'
