--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+stsbl-iserv3-internet (19.08.08-1) experimental; urgency=medium
+
+  * Updated source format
+  * Fixed deprecations
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Thu, 08 Aug 2019 03:21:10 +0200
+
 stsbl-iserv3-internet (19.01.25-1) experimental; urgency=medium
 
   * Removed legacy route annotation usage
