--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv3-internet (21.06.09.2) testing; urgency=medium
+
+  * Added homepage
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Wed, 09 Jun 2021 23:16:38 +0200
+
 stsbl-iserv3-internet (21.06.09.1) testing; urgency=medium
 
   * Updated license copyright
