--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv3-internet (21.08.17.1) stable; urgency=medium
+
+  * Switched to git source format
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Tue, 17 Aug 2021 22:45:14 +0200
+
 stsbl-iserv3-internet (21.06.09.3) testing; urgency=medium
 
   * Fixed Build-Depends
