--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv3-internet (21.12.05.1) stable; urgency=medium
+
+  * Added missing maintenance dependency
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Sun, 05 Dec 2021 08:08:07 +0100
+
 stsbl-iserv3-internet (21.08.17.1) stable; urgency=medium
 
   * Switched to git source format
