--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv3-internet (22.03.01.1) stable; urgency=medium
+
+  * Removed dependency to deprecated iserv-internet
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Tue, 01 Mar 2022 19:23:22 +0100
+
 stsbl-iserv3-internet (21.12.05.1) stable; urgency=medium
 
   * Added missing maintenance dependency
