--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+stsbl-iserv3-internet (22.11.04.1) testing; urgency=medium
+
+  * Replaced deprecated twig template syntax
+  * Twig: Replaced spaceless with apply spaceless
+  * Added UUID to privleges and flags
+  * Modernized code
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Fri, 04 Nov 2022 06:37:46 +0100
+
 stsbl-iserv3-internet (22.03.01.1) stable; urgency=medium
 
   * Removed dependency to deprecated iserv-internet
