--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+stsbl-iserv3-internet (23.04.21.1) stable; urgency=medium
+
+  * Fixed deprecations
+
+ -- Felix Jacobi <Felix@jacobi-hamburg.net>  Fri, 21 Apr 2023 05:55:38 +0200
+
 stsbl-iserv3-internet (22.11.04.1) testing; urgency=medium
 
   * Replaced deprecated twig template syntax
